<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="1dp"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:paddingTop="16dp"
    android:paddingBottom="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="0dp"
            app:cardPreventCornerOverlap="false">

            <ImageView
                android:id="@+id/ivAvatar"
                android:layout_width="@dimen/avatar_size"
                android:layout_height="@dimen/avatar_size"
                android:contentDescription="@string/github_avatar"
                tools:background="@drawable/ic_person_black_24dp" />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:textColor="@color/textColor2"
                android:textSize="12dp"
                tools:text="username" />

            <TextView
                android:id="@+id/repositoryName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/textColor2"
                android:textSize="15dp"
                android:textStyle="bold"
                tools:text="RepositoryName" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/expandedLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="15dp"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="visible">

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/textColor2"
            android:textSize="12dp"
            tools:text="Description" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                app:cardCornerRadius="5dp"
                app:cardElevation="0dp"
                app:cardPreventCornerOverlap="false">

                <ImageView
                    android:id="@+id/ivLanguageColor"
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:contentDescription="@string/language_color"
                    tools:background="@android:color/holo_red_dark" />

            </androidx.cardview.widget.CardView>


            <TextView
                android:id="@+id/ivLanguageText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:textColor="@color/textColor2"
                android:textSize="12dp"
                tools:text="language" />

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_margin="4dp"
                android:contentDescription="@string/star_icon"
                android:src="@drawable/star_yellow_16" />

            <TextView
                android:id="@+id/starCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:textColor="@color/textColor2"
                android:textSize="12dp"
                tools:text="10,000" />

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_margin="4dp"
                android:contentDescription="@string/fork_icon"
                android:src="@drawable/fork_black_16" />

            <TextView
                android:id="@+id/forkCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:textColor="@color/textColor2"
                android:textSize="12dp"
                tools:text="4,376" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>